# drf_test

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
app/: authentication.py  models.py  serializers.py  tasks.py  urls.py  views.py
app/management/commands/: db_cleanup.py
app/migrations/: 0001_initial.py
app/tests/: test_app.py  test_clean_db.py  test_group.py  test_user.py
drf_test/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
