[tool.poetry]
name = "drf_test"
version = "0.1.0"
description = ""
authors = ["lolek"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
